--- a/popup.html
+++ b/popup.html
@@ -5,18 +5,13 @@
   </head>
   
   <body>
-    <p>Deactive or activate the extension.</p>
-
-    <!-- Input for URLs -->
-    <input type="text" placeholder="Enter URL" id="url">
-    
-    <!-- Temporary breaks to separate the toggle button and input box -->
-    <br><br>
-
     <!-- Toggle button -->
-    <label class="switch">
-      <input type="checkbox">
-      <span class="slider round"></span>
-    </label>
+  <label>Deactivate or Activate the Extension...<br />
+    <select id="active-status" name="active-status">
+      <option value="">Select One...</option>
+      <option value="on">On</option>
+      <option value="off">Off</option>
+    </select>
+</label>
   </body>
 </html>
