--- a/popup.html
+++ b/popup.html
@@ -6,12 +6,10 @@
   
   <body>
     <!-- Toggle button -->
-  <label>Deactivate or Activate the Extension...<br />
-    <select id="active-status" name="active-status">
-      <option value="">Select One...</option>
-      <option value="on">On</option>
-      <option value="off">Off</option>
-    </select>
-</label>
-  </body>
+    <section>
+  <input type="text" placeholder="Add URL" />
+  <button id="activate">Activate</button>
+  <button id="disable">Disable</button>
+  </section>
+  <script src="app.js"></script>
 </html>
