--- a/popup.html
+++ b/popup.html
@@ -7,9 +7,10 @@
   <body>
     <!-- Toggle button -->
     <section>
-  <input type="text" placeholder="Add URL" />
-  <button id="activate">Activate</button>
-  <button id="disable">Disable</button>
+  <input type="text" placeholder="Enter URL" id="inputURL" />
+  <button id="enterURL">Add</button><br />
+  <button id="activate" class="controls">Activate</button>
+  <button id="disable" class="controls">Disable</button>
   </section>
   <script src="app.js"></script>
 </html>
