Closing body tag

--- a/popup.html
+++ b/popup.html
@@ -6,11 +6,10 @@
   
   <body>
     <!-- Toggle button -->
-    <section>
-  <input type="text" placeholder="Enter URL" id="inputURL" />
-  <button id="enterURL">Add</button><br />
-  <button id="activate" class="controls">Activate</button>
-  <button id="disable" class="controls">Disable</button>
-  </section>
+    <input type="text" placeholder="Enter URL" id="inputURL" />
+    <button id="enterURL">Add</button><br />
+    <button id="activate" class="controls">Activate</button>
+    <button id="disable" class="controls">Disable</button>
   <script src="app.js"></script>
+  </body>
 </html>
